--- a/package.json
+++ b/package.json
@@ -22,27 +22,29 @@
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
-    "@types/jest": "^23.3.2",
+    "@types/jest": "^23.3.7",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "http-server": "^0.11.0",
     "jest": "^23.6.0",
     "live-reload": "^1.1.0",
+    "lodash": ">=4.17.5",
     "onchange": "^4.1.0",
     "parallelshell": "^3.0.2",
     "sloc": "^0.2.0",
-    "ts-jest": "^23.10.3",
-    "ts-loader": "^5.2.1",
+    "syntax-error": ">=1.1.1",
+    "ts-jest": "^23.10.4",
+    "ts-loader": "^5.2.2",
     "tslint": "^5.11.0",
-    "typescript": "^3.1.1",
-    "webpack": "^4.20.2",
-    "webpack-bundle-analyzer": "^3.0.2",
+    "typescript": "^3.1.3",
+    "webpack": "^4.23.1",
+    "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
     "dexie": "^2.0.4",
     "p-queue": "^3.0.0",
-    "redom": "^3.14.1"
+    "redom": "^3.14.3"
   }
 }
